--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <button class="btn" id="btn-next">Дальше</button>
       <button class="btn know" id="btn-know">Знаю</button>
-      <button class="btn restart hide" id="btn-restart">Знаю</button>
+      <button class="btn restart hide" id="btn-restart">Рестарт</button>
     </main>
     <script src="script.js"></script>
   </body>
