--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
 
       <div class="wrap">
         <div class="card">
-          <div class="front"><span id="front-text">Front</span></div>
-          <div class="back"><span id="back-text">Back</span></div>
+          <div class="front" id="front-card">
+            <span id="front-text">Front</span>
+          </div>
+          <div class="back" id="back-card">
+            <span id="back-text">Back</span>
+          </div>
         </div>
       </div>
       <button class="btn" id="btn-next">Дальше</button>
