feat: add unit 3

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <main>
+      <a href="units.html">all units</a>
       <p class="title"></p>
       <hr />
       <p class="count-ques"></p>
