--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <main>
       <a href="units.html">all units</a>
+      <a href="dictionary.html">dictionary</a>
       <p class="title"></p>
       <hr />
       <p class="count-ques"></p>
