feat: add unit 5

--- a/units.html
+++ b/units.html
@@ -11,6 +11,7 @@
       <li><a href="./?id=unit2">Past Simple 1-25 Verbs</a></li>
       <li><a href="./?id=unit3">Past Simple 26-50 Verbs</a></li>
       <li><a href="./?id=unit4">Past Simple 51-75 Verbs</a></li>
+      <li><a href="./?id=unit5">Past Simple 76-100 Verbs</a></li>
     </ul>
   </body>
 </html>
