--- a/units.html
+++ b/units.html
@@ -12,6 +12,7 @@
       <li><a href="./?id=unit3">Past Simple 26-50 Verbs</a></li>
       <li><a href="./?id=unit4">Past Simple 51-75 Verbs</a></li>
       <li><a href="./?id=unit5">Past Simple 76-100 Verbs</a></li>
+      <li><a href="./?id=unit6">Past Simple Irregular verbs part 1</a></li>
     </ul>
   </body>
 </html>
