--- a/units.html
+++ b/units.html
@@ -13,6 +13,7 @@
       <li><a href="./?id=unit4">Past Simple 51-75 Verbs</a></li>
       <li><a href="./?id=unit5">Past Simple 76-100 Verbs</a></li>
       <li><a href="./?id=unit6">Past Simple Irregular verbs part 1</a></li>
+      <li><a href="./?id=unit7">Past Simple Irregular verbs part 2</a></li>
     </ul>
   </body>
 </html>
