feat: add unit 8

--- a/units.html
+++ b/units.html
@@ -14,6 +14,7 @@
       <li><a href="./?id=unit5">Past Simple 76-100 Verbs</a></li>
       <li><a href="./?id=unit6">Past Simple Irregular verbs part 1</a></li>
       <li><a href="./?id=unit7">Past Simple Irregular verbs part 2</a></li>
+      <li><a href="./?id=unit8">Past Simple Was Were Did</a></li>
     </ul>
   </body>
 </html>
