--- a/units.html
+++ b/units.html
@@ -16,6 +16,7 @@
       <li><a href="./?id=unit7">Past Simple Irregular verbs part 2</a></li>
       <li><a href="./?id=unit8">Past Simple Was Were Did</a></li>
       <li><a href="./?id=unit9">Question Past Simple Was Were Did</a></li>
+      <li><a href="./?id=unit10">Present continuous</a></li>
     </ul>
   </body>
 </html>
