--- a/units.html
+++ b/units.html
@@ -21,6 +21,8 @@
       <li><a href="./?id=unit12">Present continuous Questions</a></li>
       <li><a href="./?id=unit13">Different Present Continous and Present Simple</a></li>
       <li><a href="./?id=unit14">Present Simple again</a></li>
+      <li><a href="./?id=unit15">Present Continous again</a></li>
+      <li><a href="./?id=unit16">Non-continious words</a></li>
     </ul>
   </body>
 </html>
