--- a/units.html
+++ b/units.html
@@ -29,7 +29,7 @@
       <li><a href="./?id=unit16">Non-continious words</a></li>
       <li><a href="./?id=unit17">Last lesson A1</a></li>
 
-      <li><a href="./A2/?id=unit1">Present Perfect</a></li>
+      <li><a href="./?id=A2/unit1">Present Perfect</a></li>
     </ul>
   </body>
 </html>
