--- a/keyA2.html
+++ b/keyA2.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <ul>
-      <li><a href="./?id=dictionary/words1">words 1-20</a></li>
+      <li><a href="./?id=keyA2/lesson1">lesson1</a></li>
     </ul>
   </body>
 </html>
