feat: add unit 6

--- a/units.html
+++ b/units.html
@@ -43,6 +43,12 @@
           >Different Past Perfect, Past Continious, Present Perfect</a
         >
       </li>
+      <li>
+        <a href="./?id=A2/unit6"
+          >90 irregular verbs-210 regular verbs in 7 different tenses (1
+          part)</a
+        >
+      </li>
     </ul>
   </body>
 </html>
