feat: add unit 7

--- a/units.html
+++ b/units.html
@@ -49,6 +49,12 @@
           part)</a
         >
       </li>
+      <li>
+        <a href="./?id=A2/unit7"
+          >90 irregular verbs-210 regular verbs in 7 different tenses (2
+          part)</a
+        >
+      </li>
     </ul>
   </body>
 </html>
