feat: add unit 8

--- a/units.html
+++ b/units.html
@@ -55,6 +55,12 @@
           part)</a
         >
       </li>
+      <li>
+        <a href="./?id=A2/unit8"
+          >90 irregular verbs-210 regular verbs in 7 different tenses (3
+          part)</a
+        >
+      </li>
     </ul>
   </body>
 </html>
