--- a/units.html
+++ b/units.html
@@ -6,6 +6,9 @@
     <title></title>
   </head>
   <body>
+    <a href="./keyA2.html">key A2</a><br />
+    <a href="./addition.html">Extra by video</a><br />
+
     <h3>Level A1</h3>
     <ul>
       <li><a href="./?id=unit1">Will be able to</a></li>
