--- a/keyA2.html
+++ b/keyA2.html
@@ -9,6 +9,7 @@
     <ul>
       <li><a href="./?id=keyA2/lesson1">lesson1</a></li>
       <li><a href="./?id=keyA2/lesson2">lesson2</a></li>
+      <li><a href="./?id=keyA2/lesson3">lesson2</a></li>
     </ul>
   </body>
 </html>
