--- a/units.html
+++ b/units.html
@@ -142,6 +142,12 @@
       <li>
         <a href="./?id=A2/unit22">Conditional sentences</a>
       </li>
+      <li>
+        <a href="./?id=A2/unit23">Passive voice</a>
+      </li>
+      <li>
+        <a href="./?id=A2/unit24">Degrees of comparison</a>
+      </li>
     </ol>
   </body>
 </html>
