--- a/units.html
+++ b/units.html
@@ -148,6 +148,9 @@
       <li>
         <a href="./?id=A2/unit24">Degrees of comparison</a>
       </li>
+      <li>
+        <a href="./?id=A2/unit25">Last lesson</a>
+      </li>
     </ol>
   </body>
 </html>
