--- a/units.html
+++ b/units.html
@@ -33,6 +33,13 @@
       <li><a href="./?id=unit16">Non-continious words</a></li>
       <li><a href="./?id=unit17">Last lesson A1</a></li>
     </ul>
+    <h3>Level B1</h3>
+    <ol>
+      <li>
+        <a href="./?id=B1/unit1">B1 lesson 1 Present Perfect Continious</a>
+      </li>
+      <li><a href="./?id=B1/unit2">B1 lesson 2 Future Continious</a></li>
+    </ol>
     <h3>Level A2</h3>
     <ol>
       <li><a href="./?id=A2/unit1">Present Perfect</a></li>
