feat: add units 4-8

--- a/units.html
+++ b/units.html
@@ -39,6 +39,12 @@
         <a href="./?id=B1/unit1">B1 lesson 1 Present Perfect Continious</a>
       </li>
       <li><a href="./?id=B1/unit2">B1 lesson 2 Future Continious</a></li>
+      <li><a href="./?id=B1/unit3">B1 lesson 3</a></li>
+      <li><a href="./?id=B1/unit4">B1 lesson 4</a></li>
+      <li><a href="./?id=B1/unit5">B1 lesson 5</a></li>
+      <li><a href="./?id=B1/unit6">B1 lesson 6</a></li>
+      <li><a href="./?id=B1/unit7">B1 lesson 7</a></li>
+      <li><a href="./?id=B1/unit8">B1 lesson 8</a></li>
     </ol>
     <h3>Level A2</h3>
     <ol>
